--- a/IntelMetTask/packages.config
+++ b/IntelMetTask/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net481" />
   <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net481" />
 </packages>
