--- a/IntelMetTask/IntelMetTask.csproj
+++ b/IntelMetTask/IntelMetTask.csproj
@@ -61,6 +61,7 @@
             <Generator>MSBuild:Compile</Generator>
             <SubType>Designer</SubType>
         </ApplicationDefinition>
+        <Compile Include="Constants.cs" />
         <Compile Include="Distance.cs" />
         <Compile Include="RelayCommand.cs" />
         <Compile Include="SlabMeasure.cs" />
