--- a/IntelMetTask/IntelMetTask.csproj
+++ b/IntelMetTask/IntelMetTask.csproj
@@ -63,6 +63,7 @@
         </ApplicationDefinition>
         <Compile Include="Constants.cs" />
         <Compile Include="Distance.cs" />
+        <Compile Include="NoiseRemover.cs" />
         <Compile Include="RelayCommand.cs" />
         <Compile Include="SlabMeasure.cs" />
         <Page Include="MainWindow.xaml">
